--- a/cocowow/zarf.yaml
+++ b/cocowow/zarf.yaml
@@ -11,8 +11,8 @@ metadata:
 
 variables:
   - name: REALM
-    default: cocowow
-    prompt: false
+  - name: KC_ADM_USER
+  - name: KC_ADM_PASSWORD
 
 components:
   - name: load-certs
@@ -51,38 +51,3 @@ components:
         # look at imports and then merging here for composition
         - ../values/authservice.yaml
         - ../values/keycloak.yaml
-        - customization.yaml
-  - name: configure-keycloak
-    required: false
-    files:
-      - source: https://github.com/keycloak/keycloak/releases/download/21.0.1/keycloak-21.0.1.tar.gz
-        target: keycloak.tar.gz
-    actions:
-      onDeploy:
-        after:
-          - cmd: rm -rf kc-api && tar xf keycloak.tar.gz && rm keycloak.tar.gz && mv keycloak-21.0.1 kc-api
-            description: Untar the keycloak files
-          - cmd: bash -c 'until [ $(curl -L -s -o /dev/null -w "%{http_code}" https://keycloak.###ZARF_PKG_TMPL_DOMAIN###/auth/admin) -eq 200 ]; do sleep 60; echo "Trying to connect to the Keycloak endpoint..."; done'
-            description: Wait for Keycloak endpoint to accept requests
-          - cmd: ./kc-api/bin/kcadm.sh config credentials --realm master --server https://keycloak.###ZARF_PKG_TMPL_DOMAIN###/auth --user ###ZARF_PKG_TMPL_KC_ADM_USER### --password ###ZARF_PKG_TMPL_KC_ADM_PASSWORD###
-            description: Login into keycloak as admin and save the config for future commands
-          - cmd: ./kc-api/bin/kcadm.sh create realms -s realm=###ZARF_PKG_TMPL_REALM### -s enabled=true
-            description: Create the Cocowow realm
-          - cmd: ./kc-api/bin/kcadm.sh create users -r ###ZARF_PKG_TMPL_REALM### -s username=demo -s email=demo@example.com -s enabled=true 
-            description: Create a 'demo' user
-          - cmd: ./kc-api/bin/kcadm.sh set-password -r ###ZARF_PKG_TMPL_REALM### --username demo --new-password supersecretpassword --temporary
-            description: Update the 'demo' user's password
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=tempo -s enabled=true -s 'redirectUris=["https://tracing.###ZARF_PKG_TMPL_DOMAIN###/login"]'
-            description: "Add tempo client in keycloak"
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=kiali -s enabled=true -s 'redirectUris=["https://kiali.###ZARF_PKG_TMPL_DOMAIN###/kiali"]'
-            description: "Add grafana client in keycloak"
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=grafana -s enabled=true -s 'redirectUris=["https://grafana.###ZARF_PKG_TMPL_DOMAIN###/login/generic_oauth"]'
-            description: "Add kiali client in keycloak"
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=prometheus -s enabled=true -s 'redirectUris=["https://prometheus.###ZARF_PKG_TMPL_DOMAIN###/login/generic_oauth"]'
-            description: "Add prometheus client in keycloak"
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=alertmanager -s enabled=true -s 'redirectUris=["https://alertmanager.###ZARF_PKG_TMPL_DOMAIN###/login/generic_oauth"]'
-            description: "Add alertmanager client in keycloak"
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r ###ZARF_PKG_TMPL_REALM### -s clientId=neuvector -s enabled=true -s 'redirectUris=["https://neuvector.###ZARF_PKG_TMPL_DOMAIN###/openId_auth"]'
-            description: "Add neuvector client in keycloak"
-          - cmd: ./scripts/update-admin-services-sso.sh 
-            description: Update the chain data for the cluster's admin services
