--- a/cocowow/podinfo/zarf.yaml
+++ b/cocowow/podinfo/zarf.yaml
@@ -2,6 +2,7 @@ kind: ZarfPackageConfig
 metadata:
   name: podinfo
   description: "An example mission app"
+  version: 6.0.0-bb.7
 
 components:
   - name: podinfo
