--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -7,4 +7,4 @@ kyvernoPolicies:
           - registry1.dso.mil
           - registry.dso.mil
           - 127.0.0.1 # zarf registry
-
+          - ghcr.io
