use remote state if needed

--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -57,6 +57,8 @@ components:
         before:
           - cmd: "terraform init -upgrade"
             dir: loki
+          - cmd: "terraform apply --target=\"local_file.terraform_backend_config\" --auto-approve" 
+            dir: loki
     files:
     # terraform code
     - source: loki/.terraform
