--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  clean-install:
+  eksctl:
     runs-on: ubuntu-latest
   
     steps:
@@ -39,7 +39,7 @@ jobs:
         env:
           SHA: ${{ github.sha }}
         run: |
-          echo "eks_cluster_name=big-bang-${SHA:0:7}" >> $GITHUB_OUTPUT
+          echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
       - name: Package EKSCTL 
         run: zarf package create --confirm
@@ -47,13 +47,10 @@ jobs:
 
       - name: Create EKS cluster
         run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
-            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
+          echo ${{ steps.get_cluster_name.outputs.short_sha }}
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst --set cluster_name=${{ steps.get_cluster_name.outputs.short_sha }} --confirm 
         working-directory: .github/workflows/eks
-
+        # eventually have zarf deploy   \
       - name: Show Cluster
         run: |
           kubectl get nodes
@@ -73,7 +70,6 @@ jobs:
         timeout-minutes: 60
 
       - name: Remove DUBBD
-        if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
@@ -85,96 +81,3 @@ jobs:
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
 
-  upgrade:
-    runs-on: ubuntu-latest
-  
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Run this step first so we can fail fast in case an invalid package name is provided
-      - name: Get latest package version to upgrade from
-        id: latest-package-version
-        uses: ./.github/actions/latest-package-version
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          package-name: packages/big-bang-distro-aws
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.26.4
-          download-init-package: true
-
-      - name: Login to Registry1
-        uses: docker/login-action@v2
-        with:
-          registry: registry1.dso.mil
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
-    
-      - name: Set eks_cluster_name
-        id: get_cluster_name
-        env:
-          SHA: ${{ github.sha }}
-        run: |
-          echo "eks_cluster_name=big-bang-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
-
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
-
-      - name: Create EKS cluster
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
-            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
-        working-directory: .github/workflows/eks
-
-      - name: Show Cluster
-        run: |
-          kubectl get nodes
-
-      - name: Zarf init
-        run: |
-          zarf init -a amd64 --components=git-server --confirm
-
-      - name: Create DUBBD
-        run: zarf package create --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
-
-      - name: Deploy latest package version
-        working-directory: defense-unicorns-distro
-        run: |
-          zarf package deploy \
-            oci://ghcr.io/defenseunicorns/packages/big-bang:${{ steps.latest-package-version.outputs.latest-package-version }} \
-            --confirm
-
-      - name: Deploy DUBBD
-        run: zarf package deploy zarf-package-*.tar.zst --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
-
-      - name: Remove DUBBD
-        if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
-
-      - name: Teardown EKS cluster
-        if: always()
-        # can't do a zarf package remove since there's no kubernetes cluster.
-        run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
