--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -1,9 +1,9 @@
 istio:
   enabled: true
   ingressGateways:
-    passthrough-ingressgateway:
+    admin-ingressgateway:
       type: "LoadBalancer"
-    public-ingressgateway:
+    tenant-ingressgateway:
       type: "LoadBalancer"
   values:
     istiod:
@@ -25,19 +25,20 @@ istio:
             limits:
               memory: "1Gi"
   gateways:
-    public:
-      ingressGateway: public-ingressgateway
+    admin:
+      ingressGateway: admin-ingressgateway
       hosts:
         - "*.{{ .Values.domain }}"
       tls:
         key: "###ZARF_VAR_PUBLIC_KEY###"
         cert: "###ZARF_VAR_PUBLIC_CERT###"
-    passthrough:
-      ingressGateway: passthrough-ingressgateway
+    tenant:
+      ingressGateway: tenant-ingressgateway
       hosts:
         - "*.{{ .Values.domain }}"
       tls:
-        mode: "PASSTHROUGH"
+        key: "###ZARF_VAR_PUBLIC_KEY###"
+        cert: "###ZARF_VAR_PUBLIC_CERT###"
 istioOperator:
   enabled: true
   values:
