--- a/values/values.yaml
+++ b/values/values.yaml
@@ -6,6 +6,13 @@ networkPolicies:
   nodeCidr: "0.0.0.0/0"
   vpcCidr: "0.0.0.0/0"
 
+# Disable all Flux retry/rollback behavior
+flux:
+  upgrade:
+    remediation:
+      retries: 0
+      remediateLastFailure: false
+
 addons:
   velero:
     enabled: false
