--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -96,6 +96,10 @@ jobs:
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
 
+      - name: Save zarf debug logs
+        if: always()
+        uses: defenseunicorns/zarf/.github/actions/save-logs@main
+
   upgrade:
     runs-on: ubuntu-latest
   
@@ -199,3 +203,7 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
+
+      - name: Save zarf debug logs
+        if: always()
+        uses: defenseunicorns/zarf/.github/actions/save-logs@main
