--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -137,6 +137,10 @@ components:
           - cmd: ./zarf tools kubectl wait --for=jsonpath='{.spec.ref.tag}'=###ZARF_PKG_TMPL_BIGBANG_VERSION### gitrepository bigbang -n bigbang --timeout=5m
             description: "Wait for BigBang GitRepository to update to latest version"
             mute: true
+          - cmd: ./flux reconcile source git bigbang -n bigbang
+            dir: run/flux
+            mute: true
+          - cmd: ./zarf tools kubectl patch helmcharts.source.toolkit.fluxcd.io -n bigbang bigbang-bigbang --type=merge -p '{"metadata":{"annotations":{"reconcile.fluxcd.io/requestedAt":"'`date '+%F_%H:%M:%S.%s%z'`'"}}}'
           - cmd: ./flux reconcile helmrelease bigbang -n bigbang --with-source --verbose --timeout 15m
             dir: run/flux
             description: "Reconcile Big Bang helmrelease with source"
