--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -137,22 +137,24 @@ components:
           - cmd: ./zarf tools kubectl wait --for=jsonpath='{.spec.ref.tag}'=###ZARF_PKG_TMPL_BIGBANG_VERSION### gitrepository bigbang -n bigbang --timeout=5m
             description: "Wait for BigBang GitRepository to update to latest version"
             mute: true
-          - cmd: ./flux reconcile source git bigbang -n bigbang
+          - cmd: ./flux reconcile source git bigbang -n bigbang --verbose --timeout=5m
             dir: run/flux
             mute: true
-          - cmd: ./zarf tools kubectl patch helmcharts.source.toolkit.fluxcd.io -n bigbang bigbang-bigbang --type=merge -p '{"metadata":{"annotations":{"reconcile.fluxcd.io/requestedAt":"'`date '+%F_%H:%M:%S.%s%z'`'"}}}'
-          - cmd: ./flux reconcile helmrelease bigbang -n bigbang --with-source --verbose --timeout 15m
+          - cmd: ./zarf tools kubectl wait --for=condition="Ready" helmcharts.source.toolkit.fluxcd.io -n bigbang bigbang-bigbang --timeout=5m
+            description: "Wait for BigBang HelmChart to be ready"
+            mute: true
+          - cmd: ./flux reconcile helmrelease bigbang -n bigbang --with-source --verbose --timeout 10m
             dir: run/flux
-            description: "Reconcile Big Bang helmrelease with source"
+            description: "Reconcile Big Bang HelmRelease with source"
             maxTotalSeconds: 600
           - cmd: |
               export PATH=$(dirname ./zarf):$PATH
               for package in kyverno kyverno-policies istio-operator istio monitoring loki metrics-server tempo promtail neuvector kiali kyverno-reporter; do
-                ./flux reconcile helmrelease $package -n bigbang --with-source --verbose --timeout 10m & # Reconcile in the background to not wait
+                ./zarf tools kubectl patch helmrelease -n bigbang $package --type=merge -p '{"metadata":{"annotations":{"reconcile.fluxcd.io/requestedAt":"'`date '+%F_%H:%M:%S.%s%z'`'"}}}' || true
               done
             dir: run/flux
             mute: true
-            description: "Patch package helmreleases to force reconciliation on upgrade"
+            description: "Patch package HelmReleases to force reconciliation on upgrade"
         onFailure:
           - cmd: |
               export PATH=$(dirname ./zarf):$PATH
