--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -29,7 +29,9 @@ variables:
   default: bigbang.dev.key
   description: "This file contains the key for the admin ingress gateway"
   prompt: false
-
+- name: APPROVED_REGISTRIES
+  description: "Regex of approved registries to allow in cluster"
+  default: "127.0.0.1* | registry1.dso.mil"
 - name: MONITORING_PROMETHEUS_PVC_SIZE
   default: "50Gi"
   description: Size of PVC for Prometheus
