include pepr-capabilities and configure client_id to use convention based il2 group

--- a/pepr-demo/zarf.yaml
+++ b/pepr-demo/zarf.yaml
@@ -7,6 +7,11 @@ metadata:
   url: https://p1.dso.mil/products/big-bang
   architecture: amd64
 components:
+  - name: import-module
+    import:
+      name: module
+      url: oci://ghcr.io/rjferguson21/pepr-capabilities/pepr-e4a35052-c138-55e4-94a7-bb942b1cddc7:1.3-skeleton
+    required: true
   - name: metallb
     required: true
     manifests:
