Extract package init function

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -6,33 +6,17 @@ on:
       - main
 
 jobs:
+  init-install:
+    uses: ./.github/workflows/common/init-bb-packaging.yaml
+    secrets: inherit
+
   clean-install:
     runs-on: ubuntu-latest
+    needs: init-install
   
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.27.0
-          download-init-package: true
-
-      - name: Login to Registry1
-        uses: docker/login-action@v2
-        with:
-          registry: registry1.dso.mil
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
           
       - name: Set eks_cluster_name
         id: get_cluster_name
@@ -67,131 +51,131 @@ jobs:
         run: |
           zarf init -a amd64 --components=git-server --confirm
 
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #     - name: Create DUBBD-AWS
+  #       run: zarf package create --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
-      - name: Deploy DUBBD-AWS
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+  #     - name: Deploy DUBBD-AWS
+  #       run: |
+  #         echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
-          zarf package deploy zarf-package-*.tar.zst \
-            --set loki_force_destroy=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #         zarf package deploy zarf-package-*.tar.zst \
+  #           --set loki_force_destroy=true \
+  #           --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+  #           --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
-      - name: Remove DUBBD-AWS
-        if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #     - name: Remove DUBBD-AWS
+  #       if: always()
+  #       run: zarf package remove zarf-package-*.tar.zst --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
-      - name: Teardown EKS cluster
-        if: always()
-        # can't do a zarf package remove since there's no kubernetes cluster.
-        run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
+  #     - name: Teardown EKS cluster
+  #       if: always()
+  #       # can't do a zarf package remove since there's no kubernetes cluster.
+  #       run: |
+  #         ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+  #       working-directory: .github/workflows/eks
 
-  upgrade:
-    runs-on: ubuntu-latest
+  # upgrade:
+  #   runs-on: ubuntu-latest
   
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
 
-      # Run this step first so we can fail fast in case an invalid package name is provided
-      - name: Get latest package version to upgrade from
-        id: latest-package-version
-        uses: ./.github/actions/latest-package-version
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          package-name: packages/big-bang-distro-aws
+  #     # Run this step first so we can fail fast in case an invalid package name is provided
+  #     - name: Get latest package version to upgrade from
+  #       id: latest-package-version
+  #       uses: ./.github/actions/latest-package-version
+  #       with:
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         package-name: packages/big-bang-distro-aws
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: us-west-2
 
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.27.0
-          download-init-package: true
+  #     - name: Install Zarf
+  #       uses: defenseunicorns/setup-zarf@main
+  #       with:
+  #         # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
+  #         version: v0.27.0
+  #         download-init-package: true
 
-      - name: Login to Registry1
-        uses: docker/login-action@v2
-        with:
-          registry: registry1.dso.mil
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
+  #     - name: Login to Registry1
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: registry1.dso.mil
+  #         username: ${{ secrets.REGISTRY1_USERNAME }}
+  #         password: ${{ secrets.REGISTRY1_PASSWORD }}
           
-      - name: Set eks_cluster_name
-        id: get_cluster_name
-        env:
-          SHA: ${{ github.sha }}
-        run: |
-          echo "eks_cluster_name=big-bang-aws-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
-          echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
+  #     - name: Set eks_cluster_name
+  #       id: get_cluster_name
+  #       env:
+  #         SHA: ${{ github.sha }}
+  #       run: |
+  #         echo "eks_cluster_name=big-bang-aws-upgrade-${SHA:0:7}" >> $GITHUB_OUTPUT
+  #         echo "short_sha=${SHA:0:7}" >> $GITHUB_OUTPUT
 
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
+  #     - name: Package EKSCTL 
+  #       run: zarf package create --confirm
+  #       working-directory: .github/workflows/eks
 
-      - name: Create EKS cluster
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+  #     - name: Create EKS cluster
+  #       run: |
+  #         echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
-            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
-        working-directory: .github/workflows/eks #just holds the zarf-config
-        id: create-cluster
+  #         zarf package deploy zarf-package-distro-eks-multi.tar.zst \
+  #           --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+  #           --confirm
+  #       working-directory: .github/workflows/eks #just holds the zarf-config
+  #       id: create-cluster
 
-      - name: Show Cluster
-        run: |
-          kubectl get nodes
-          kubectl config get-contexts
+  #     - name: Show Cluster
+  #       run: |
+  #         kubectl get nodes
+  #         kubectl config get-contexts
 
-      - name: Zarf init
-        run: |
-          zarf init -a amd64 --components=git-server --confirm
+  #     - name: Zarf init
+  #       run: |
+  #         zarf init -a amd64 --components=git-server --confirm
 
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #     - name: Create DUBBD-AWS
+  #       run: zarf package create --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
-      - name: Deploy latest package version
-        working-directory: aws
-        run: |
-          zarf package deploy \
-            oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
-            --set loki_force_destroy=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
+  #     - name: Deploy latest package version
+  #       working-directory: aws
+  #       run: |
+  #         zarf package deploy \
+  #           oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
+  #           --set loki_force_destroy=true \
+  #           --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+  #           --confirm
 
-      - name: Deploy DUBBD-AWS
-        run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-          zarf package deploy zarf-package-*.tar.zst \
-            --set loki_force_destroy=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #     - name: Deploy DUBBD-AWS
+  #       run: |
+  #         echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+  #         zarf package deploy zarf-package-*.tar.zst \
+  #           --set loki_force_destroy=true \
+  #           --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+  #           --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
-      - name: Remove DUBBD-AWS
-        if: always()
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
-        timeout-minutes: 60
+  #     - name: Remove DUBBD-AWS
+  #       if: always()
+  #       run: zarf package remove zarf-package-*.tar.zst --confirm
+  #       working-directory: aws
+  #       timeout-minutes: 60
 
       - name: Teardown EKS cluster
         if: always()
