--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -17,11 +17,11 @@ variables:
 - name: TERRAFORM_VERSION
 - name: TERRAFORM_PROVIDER_AWS_VERSION
 
-- name: TF_STATE_BUCKET_NAME # todo: agree on tf vs terraform for these vars?
+- name: STATE_BUCKET_NAME
   description: "Name of the pre-existing Terraform state S3 bucket"
-- name: TF_STATE_KEY
+- name: STATE_KEY
   description: "Path to the state file key in the state bucket"
-- name: TF_STATE_DYNAMODB_TABLE_NAME
+- name: STATE_DYNAMODB_TABLE_NAME
   description: "Name of the DynamoDB table used for Terraform state locking"
 - name: REGION
   description: "The AWS region to run the Terraform in"
@@ -65,7 +65,11 @@ components:
       onCreate:
         before:
           - cmd: |
-              terraform init -upgrade -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" -backend-config="key=${ZARF_VAR_TF_STATE_KEY}-bucket.tfstate" -backend-config="region=${ZARF_VAR_REGION}"
+              terraform init -upgrade \
+              -backend-config="bucket=${TF_VAR_STATE_BUCKET_NAME}" \
+              -backend-config="key=${TF_VAR_STATE_KEY}-bucket.tfstate" \
+              -backend-config="region=${TF_VAR_REGION}" \
+              -backend-config="key=dynamodb_table=${TF_VAR_STATE_DYNAMODB_TABLE_NAME}"
             dir: loki
     files:
     # terraform code
